# python-bootcamp

./: README.md  main.py  pyproject.toml
Demo-DB/: main.py
Lab-00/: account.py
Lab-00/lab0_pip_test/: main.py
Lab-01/: Angabe.md  Lösung.md  account.py  main.py  main_bonus.py
Lab-02/: Angabe.md  Lösung.md  main.py  special_accounts.py
Lab-03/: Angabe.md  Lösung.md  main.py  main_bonus.py
Lab-04/: Angabe.md  Lösung.md  account.py  main.py  main_bonus.py
Lab-05/: Angabe.md  account.py  lazy_transaction_reader.py  main_bonus.py
Lab-06/: Angabe.md  main_bonus.py
Lab-07/: Angabe.md
Lab-08/: Angabe.md  decorators.py  decorators_bonus.py  main.py  main_bonus.py
Lab-09/: main.py  main_bonus.py
Lab-10/: Angabe.md  account.py  main.py  main_bonus.py
Lab-11/: Lösung.md  account.py  main.py
Lab-12/: Lösung.md
Lab-13/: Lösung.md  main.py  main_bonus.py  transactions.csv
Lab-14/: Angabe.md  Lösung.md  account.py  main_bonus.py
Lab-15/: Angabe.md  Lösung.md  external_services.py  test_account.py
Python-Advanced/Demo-DB/: sqlalchemy.py
Python-Advanced/Lab-00/: Angabe.md
Python-Advanced/Lab-01/: Angabe.md  Lösung.md  account_bonus.py  main.py  main_bonus.py
Python-Advanced/Lab-02/: Lösung.md
Python-Advanced/Lab-03/: Angabe.md  account.py  main_bonus.py
Python-Advanced/Lab-04/: exceptions.py  utils.py
Python-Advanced/Lab-05/: Lösung.md  account.py  main.py
Python-Advanced/Lab-06/: Lösung.md  (+1 more)
Python-Spezial/: Lehrplan.ods
context/: C-Lab-07.md  C-Lab-08.md  C-Lab-09.md  promt.md
stoff/uv/: pyproject.toml  slide-material.md  test.sh
(+240 files in other folders)
