[project]
name = "python-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.10.4",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
]
